[workspace]
members = ["macro", "test"]

[package]
name = "try-polyfill"
version = "0.1.0"
edition = "2021"
msrv = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
macro = ["try-polyfill-macro"]

[dependencies]
try-polyfill-macro = { version = "=0.1.0", optional = true, path = "./macro" }
